Android/Android1/Android1.NativeActivity/ARM/Debug/Android1.NativeActivity.log
  ANDROID_HOME=C:\ProgramData\Microsoft\AndroidSDK\25
  ANT_HOME=C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\Apps\apache-ant-1.9.3
  JAVA_HOME=C:\Program Files\Java\jdk1.8.0_161
  NDK_ROOT=C:\\Microsoft\AndroidNDK64\android-ndk-r13b
  Apple.cpp
  BackGround.cpp
  Camera.cpp
Camera.cpp(7,11): warning : unused variable 'offset' [-Wunused-const-variable]
  const int offset = 120;
            ^
  1 warning generated.
  Dust.cpp
Dust.cpp(13,81): warning : suggest braces around initialization of subobject [-Wmissing-braces]
          attackFlag(false), attackRange(40), color(0x00ffff), wait(0), dirwait(0), box{ 0, 0 }
                                                                                         ^~~~
                                                                                         {   }
  In file included from Dust.cpp:1:
./Dust.h(33,7): warning : private field 'attackFlag' is not used [-Wunused-private-field]
          bool attackFlag;
               ^
./Dust.h(43,6): warning : private field 'box' is not used [-Wunused-private-field]
          Box box;
              ^
  3 warnings generated.
  Enemy.cpp
Enemy.cpp(5,32): warning : field 'speed' will be initialized after field 'state' [-Wreorder]
  Enemy::Enemy() : dir(DIR_NON), speed(0), state(ST_NUETRAL), target({0,0}), die(false)
                                 ^
  1 warning generated.
  EnemyMane.cpp
  Fannings.cpp
  In file included from Fannings.cpp:1:
./Fannings.h(33,7): warning : private field 'attackFlag' is not used [-Wunused-private-field]
          bool attackFlag;
               ^
  1 warning generated.
  Game.cpp
  GameMane.cpp
  GamePlay.cpp
  Ground.cpp
  Item.cpp
  ItemMane.cpp
  LoadMane.cpp
  Main.cpp
  Over.cpp
  Player.cpp
  Scene.cpp
  Score.cpp
  In file included from Score.cpp:1:
./Score.h(49,6): warning : private field 'pos' is not used [-Wunused-private-field]
          Pos pos;
              ^
  1 warning generated.
  Stage.cpp
  Title.cpp
  Touch.cpp
   undefined reference to 'Debug::Create()'
   undefined reference to 'Debug::Update()'
   undefined reference to 'Debug::instance'
   undefined reference to 'Debug::Update()'
  clang.exe: error: linker command failed with exit code 1 (use -v to see invocation)
C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\Common7\IDE\VC\VCTargets\Application Type\Android\3.0\Android.Common.targets(104,5): error MSB6006: "clang.exe" はコード 1 を伴って終了しました。
